--- a/jewelry-box/package.json
+++ b/jewelry-box/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.10",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
