--- a/jewelry-box/package.json
+++ b/jewelry-box/package.json
@@ -26,7 +26,8 @@
     "stripe": "^17.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
